[tool.poetry]
name = "py-deep-recsys"
version = "0.1.0"
description = "Python Recommender System based on Deep Reinforcement Learning"
authors = ["Lucas Farris <lucas@farris.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"
absl-py = "0.12.0"
tensorflow = "1.15.2"
pandas = "0.25.3"
gym = "0.18.0"
torch = "1.2.0"
more-itertools = "^8.7.0"
networkx = "^2.5.1"
simplejson = "^3.17.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.9.0"
notebook = "6.1.5"
jupyter = "1.0.0"
pytest = "6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
pdoc3 = "0.9.2"
build = "^0.3.1"
recsim = "0.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit= ['venv/*']

[tool.pytest.ini_options]
testpaths = [
    "pydeeprecsys/tests"
]

[tool.coverage.report]
omit= ['venv/*']
