[tool.poetry]
name = "deeprecsys"
version = "0.1.0"
description = "Python Recommender System based on Deep Reinforcement Learning"
authors = ["Lucas Farris <lucas@farris.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"
absl-py = "0.12.0"
tensorflow = "^2.4.1"
pandas = "0.25.3"
gym = "0.18.0"
torch = "1.4.0"
more-itertools = "^8.7.0"
networkx = "^2.5.1"
simplejson = "^3.17.2"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.9.0"
notebook = "6.1.5"
jupyter = "1.0.0"
pytest = "6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
pdoc3 = "0.9.2"
build = "^0.3.1"
recsim = "0.2.4"
matplotlib = "2.2.5"
seaborn = "0.11.1"
rl-agents = {git = "https://github.com/eleurent/rl-agents"}
highway-env = "^1.1"
tqdm = "^4.60.0"
box2d-py = "^2.3.8"
tensorboardX = "^2.2"
torchviz = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "pydeeprecsys/tests"
]

[tool.coverage.run]
omit= ['venv/*', 'pydeeprecsys/tests/*', 'mlfairnessgym/*']



[tool.coverage.report]
omit= ['venv/*']
exclude_lines = [
    'raise NotImplementedError',
    'pass'
]

